подил 3 этапа