@@ -4,16 +4,16 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.time.Instant;
 import java.util.HashMap;
 import java.util.Map;
-
-import java.math.RoundingMode;
 
 @Component
 @Slf4j
 public class RiskStateReducer {
+
     public RiskState reduce(RiskState currentState, RiskEvent event) {
-        // 1. Idempotency check inside reducer to ensure purity during replay
         if (currentState.getProcessedEventIds().contains(event.getEventId())) {
             return currentState;
         }
@@ -26,15 +26,12 @@ public class RiskStateReducer {
                 default -> currentState;
             };
 
-            // Auto-Halt Logic
             if (!newState.isHalted()) {
-                // 1. Daily Loss Limit > 5%
                 BigDecimal dailyLossLimit = newState.getTotalEquity().multiply(new BigDecimal("0.05"));
                 if (newState.getDailyPnl().compareTo(dailyLossLimit.negate()) < 0) {
                     log.error("[RiskReducer] AUTO-HALT: Daily loss limit exceeded (5%)");
                     newState = newState.toBuilder().halted(true).build();
                 } else {
-                    // 2. Max Drawdown > 10% (Computed from peak)
                     BigDecimal currentDrawdown = calculateDrawdown(newState);
                     if (currentDrawdown.compareTo(new BigDecimal("10.0")) > 0) {
                         log.error("[RiskReducer] AUTO-HALT: Max drawdown exceeded (10%). Current DD: {}%", currentDrawdown);
@@ -43,16 +40,20 @@ public class RiskStateReducer {
                 }
             }
 
-            java.util.Set<String> newEventIds = new java.util.HashSet<>(newState.getProcessedEventIds());
+            java.util.LinkedHashSet<String> newEventIds = new java.util.LinkedHashSet<>(newState.getProcessedEventIds());
             newEventIds.add(event.getEventId());
             
+            // Ограничение размера до 10 000 (LRU)
+            if (newEventIds.size() > 10000) {
+                String oldest = newEventIds.iterator().next();
+                newEventIds.remove(oldest);
+            }
+            
             return newState.toBuilder()
-                    .processedEventIds(java.util.Set.copyOf(newEventIds))
+                    .processedEventIds(java.util.Collections.unmodifiableSet(newEventIds))
                     .version(currentState.getVersion() + 1)
                     .build();
-        } catch (Exception e) {
-            log.error("Critical error in RiskStateReducer for event {}: {}. Returning current state to preserve consistency.", 
-                    event.getEventId(), e.getMessage());
+        } catch (Exception e) {            log.error("Critical error in RiskStateReducer for event {}: {}.", event.getEventId(), e.getMessage());
             return currentState;
         }
     }
@@ -74,6 +75,7 @@ public class RiskStateReducer {
                 .lastUpdateTimestamp(event.timestamp())
                 .build();
     }
+
     private RiskState handleTradeExecuted(RiskState state, RiskEvent.TradeExecuted event) {
         BigDecimal newDailyPnl = state.getDailyPnl().add(event.realizedPnl());
         BigDecimal newEquity = state.getTotalEquity().add(event.realizedPnl());
@@ -83,18 +85,20 @@ public class RiskStateReducer {
         BigDecimal currentExp = newExposures.getOrDefault(event.symbol(), BigDecimal.ZERO);
         newExposures.put(event.symbol(), currentExp.add(event.quantity().multiply(event.price())));
 
+        Map<String, Instant> newCooldowns = new HashMap<>(state.getCooldowns());
+        newCooldowns.put(event.symbol(), event.timestamp().plusSeconds(60));
+
         return state.toBuilder()
                 .dailyPnl(newDailyPnl)
                 .totalEquity(newEquity)
                 .maxEquity(newMaxEquity)
                 .symbolExposures(Map.copyOf(newExposures))
+                .cooldowns(Map.copyOf(newCooldowns))
                 .lastUpdateTimestamp(event.timestamp())
                 .build();
     }
 
     private RiskState handlePriceUpdated(RiskState state, RiskEvent.PriceUpdated event) {
-        // В данной реализации обновляем только метку времени, 
-        // расчет нереализованного PnL может быть добавлен здесь
         return state.toBuilder()
                 .lastUpdateTimestamp(event.timestamp())
                 .build();
